Доработка интерфейса приемника и приема данных
